--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Project exclude paths
 /target/
+/src/main/resources/RecordForLoop.txt
+/src/main/resources/RecordStream.txt
 
 ### IntelliJ IDEA ###
 .idea
