--- a/davydova-impl/pom.xml
+++ b/davydova-impl/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>davydova</artifactId>
-        <groupId>com.epam.rd.davydova</groupId>
+        <groupId>com.epam.rd</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
