added another package

--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.epam.rd</groupId>
-    <artifactId>davydova</artifactId>
+    <groupId>com.epam.rd.davydova</groupId>
+    <artifactId>assignment</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>davydova-api</module>
-        <module>davydova-db</module>
-        <module>davydova-impl</module>
+        <module>assignment-api</module>
+        <module>assignment-db</module>
+        <module>assignment-impl</module>
     </modules>
 
     <properties>
@@ -28,17 +28,17 @@
         <dependencies>
             <dependency>
                 <groupId>com.epam.rd</groupId>
-                <artifactId>davydova-api</artifactId>
+                <artifactId>assignment-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.epam.rd</groupId>
-                <artifactId>davydova-db</artifactId>
+                <artifactId>assignment-db</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.epam.rd</groupId>
-                <artifactId>davydova-impl</artifactId>
+                <artifactId>assignment-impl</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
