--- a/assignment-impl/pom.xml
+++ b/assignment-impl/pom.xml
@@ -58,6 +58,10 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
