--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <liquibase.version>4.3.5</liquibase.version>
         <postgresql.version>42.2.13.jre7</postgresql.version>
         <hibernate.version>5.4.31.Final</hibernate.version>
+        <hibernate-types.version>2.11.1</hibernate-types.version>
     </properties>
 
     <dependencyManagement>
@@ -98,6 +99,11 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
                 <version>${hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vladmihalcea</groupId>
+                <artifactId>hibernate-types-52</artifactId>
+                <version>${hibernate-types.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
