Task1 - changeLog + initial query to create schema and user (#17)
* Task1 - changeLog + initial query to create schema and user

* Task1 - fixed as per comments

* Task1 - fixed again as per comments, Task2 - added entities and persistence.xml

* Task2 - fixed persistence.xml

* Task2 - fixed relations between entities and column definitions

* Fixed as per comments 2

* rolled back main

* final

--- a/assignment-db/pom.xml
+++ b/assignment-db/pom.xml
@@ -14,6 +14,13 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <liquibase.host>localhost</liquibase.host>
+        <liquibase.port>5432</liquibase.port>
+        <liquibase.db>epamcourses</liquibase.db>
+        <liquibase.schema>davydova</liquibase.schema>
+        <liquibase.user>usr</liquibase.user>
+        <liquibase.password>pass</liquibase.password>
+        <liquibase.changelogfile>src\main\resources\database_assignment_changelog.xml</liquibase.changelogfile>
     </properties>
 
     <dependencies>
@@ -46,6 +53,35 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>${liquibase.version}</version>
+                <configuration>
+                    <changeLogFile>${liquibase.changelogfile}</changeLogFile>
+                    <url>
+                        jdbc:postgresql://${liquibase.host}:${liquibase.port}/${liquibase.db}?currentSchema=${liquibase.schema}
+                    </url>
+                    <username>${liquibase.user}</username>
+                    <password>${liquibase.password}</password>
+                    <outputFileEncoding>UTF-8</outputFileEncoding>
+                    <driver>org.postgresql.Driver</driver>
+                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
