--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
         <postgresql.version>42.2.13.jre7</postgresql.version>
         <hibernate.version>5.4.31.Final</hibernate.version>
         <hibernate-types.version>2.11.1</hibernate-types.version>
+        <maven-war-plugin.version>3.3.1</maven-war-plugin.version>
+        <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
+        <json.version>20210307</json.version>
     </properties>
 
     <dependencyManagement>
@@ -105,6 +108,21 @@
                 <artifactId>hibernate-types-52</artifactId>
                 <version>${hibernate-types.version}</version>
             </dependency>
+            <dependency>
+                <groupId>jakarta.servlet</groupId>
+                <artifactId>jakarta.servlet-api</artifactId>
+                <version>${jakarta.servlet.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${maven-war-plugin.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -123,14 +141,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <outputEncoding>UTF-8</outputEncoding>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
