--- a/assignment-api/pom.xml
+++ b/assignment-api/pom.xml
@@ -61,6 +61,12 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.epam.rd.davydova</groupId>
+            <artifactId>assignment-impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
