--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <maven-war-plugin.version>3.3.1</maven-war-plugin.version>
         <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
         <json.version>20210307</json.version>
+        <springframework.version>5.3.7</springframework.version>
     </properties>
 
     <dependencyManagement>
@@ -122,6 +123,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>${maven-war-plugin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${springframework.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
